Fixed menu icon on smaller screens

--- a/styles/custom.css
+++ b/styles/custom.css
@@ -199,6 +199,12 @@ a.resume {
     .jumbotron {
         margin-top: 70px;
     }
+    .brand {
+        font-size: 120%;
+    }
+    .navbar-toggler {
+        margin-right: 30px;
+    }
   }
 
 
